Fixed chat flickering and not showing, added notification numbers to sliders, added friend invitation confirmation, changed inpus to forms so you can press enter, chat scrolls on any message not just yours, after message sent focus set back on input to type more

--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -39,6 +39,7 @@
 .login-section input{
     height: 30px;
     width: 350px;
+    display: block;
     background-color: transparent;
     color: #393D46;
     border: none;
